# patchwork

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
patchwork/: agent.py  cli.py  deps.py  logging_config.py  midi.py  patch_library.py  synth_definitions.py
patchwork/tools/: midi_control.py  patches.py
synths/: moog_minitaur.yaml  roland_s1.yaml  roland_tb03.yaml
tests/: test_agent.py  test_logging_config.py  test_main.py  test_midi.py  test_midi_control_tools.py  test_patch_library.py  test_patch_tools.py  test_synth_definitions.py  test_synth_yamls.py  test_tool_logging.py
