[project]
name = "patchwork"
version = "0.1.0"
description = "A CLI agent for researching synth patches, controlling hardware synths via MIDI, and managing a patch library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-ai",
    "rich",
    "python-dotenv",
    "python-rtmidi",
    "pyyaml",
]

[project.scripts]
patchwork = "patchwork.cli:main_cli"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
